# GMetal

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
App/: CMakeLists.txt  main.cpp  mainMacOS.cpp
Core/: CMakeLists.txt
Core/Graphics/include/: DepthStencilImageResourceNode.h  DescriptorPoolBuilder.h  Drawable.h  FrameGraph.h  GeneralBufferBuilder.h  IView.h  ImageBuilder.h  ImageResourceNode.h  ImageView.h  ImageViewBuilder.h  Material.h  Pipeline.h  RenderPass.h  RenderPassBuilder.h  RenderPassNode.h  Renderer.h  ResourceNode.h  SurfaceBuilder.h  SwapChain.h  UniformResourceNode.h  VulkanContext.h  VulkanContextBuilder.h
Core/Graphics/src/: DescriptorPoolBuilder.cpp  Drawable.cpp  FrameGraph.cpp  GeneralBufferBuilder.cpp  IView.cpp  ImageBuilder.cpp  ImageResourceNode.cpp  ImageView.cpp  RenderPass.cpp  RenderPassBuilder.cpp  Renderer.cpp  SurfaceBuilder.cpp  SwapChain.cpp  SwapChainBuilder.cpp  UniformResourceNode.cpp  Vertex.cpp  VulkanMemoryAllocator.cpp
Core/Src/: View.cpp
Core/include/: DepthStencilImageResourceNode.h  DescriptorPoolBuilder.h  Drawable.h  FrameGraph.h  FrameGraphNode.h  GeneralBuffer.h  Geometry.h  Group.h  IView.h  Image.h  ImageBuilder.h  ImageResourceNode.h  ImageView.h  IntrusivePtr.h  Material.h  Node.h  Pipeline.h  PipelineBuilder.h  RenderPass.h  RenderPassBuilder.h  RenderPassNode.h  Renderer.h  ResourceNode.h  ResourceNodeVisitor.h  SwapChain.h  SwapChainBuilder.h  UniformResourceNode.h  ValidationLayerDebugCallback.h  Vertex.h  View.h  VulkanContext.h  VulkanContextBuilder.h
Core/shaders/: gbuffer.frag  gbuffer.vert  merge.frag  test.frag
Core/src/: DescriptorPoolBuilder.cpp  FrameGraph.cpp  FrameGraphNode.cpp  GeneralBuffer.cpp  GeneralBufferBuilder.cpp  IView.cpp  Image.cpp  ImageBuilder.cpp  ImageResourceNode.cpp  ImageViewBuilder.cpp  Pipeline.cpp  PipelineBuilder.cpp  RenderPass.cpp  RenderPassBuilder.cpp  RenderPassNode.cpp  Renderer.cpp  SurfaceBuilder.cpp  SurfaceBuilderMacOS.cpp  SwapChain.cpp  SwapChainBuilder.cpp  UniformResourceNode.cpp  Vertex.cpp  VulkanContext.cpp  VulkanContextBuilder.cpp
MeshExchange/: CMakeLists.txt
MeshExchange/Include/: MeshExchange.h
MeshExchange/Src/: MeshExchange.cpp
Utils/: CMakeLists.txt
Utils/include/: IntrusivePtr.h  ReadFile.h  SymbolExport.h
Utils/src/: ReadFile.cpp
